--- a/public/css/slack.css
+++ b/public/css/slack.css
@@ -7,7 +7,7 @@
 
 }
 
-@layer component {
+/* @layer component { */
     .page_section {
         display: flex;
         justify-content: center;
@@ -44,11 +44,11 @@
         line-height: var(--line-height);
     }
 
-}
+/* } */
 
 
 
-@layer variant {
+/* @layer variant { */
     .button_primary {
         color: var(--color-white);
         background-color: var(--color-primary);
@@ -74,7 +74,7 @@
         width: 24px;
         background-image: url('/svg/arrow-right.svg');
     }
-}
+/* } */
 
     
 
@@ -119,7 +119,7 @@ body {
     --line-height: 1.5em;
 }
 
-@layer main {
+/* @layer main { */
     .page {
         display: grid;
     }
@@ -229,9 +229,9 @@ body {
     .features_grid_4 > .feat_card:first-of-type {
         grid-row: 1 / 3;
     }
-}
+/* } */
 
-@layer adaptive {
+/* @layer adaptive { */
     @media all and (1260px <= width) {
         .page-content {
             max-width: var(--page-width-big);
@@ -289,4 +289,51 @@ body {
             gap: var(--spacing-2);
         }
     
+/* } */
+
+.section_feature {
+    display: flex;
+    justify-content: center;
+    padding: 80px 345px 136px 345px;
+    align-items: flex-start;
+    align-self: stretch;
+    background: #F4EDE4;
+}
+
+.feature_title_text {
+    display: flex;
+    width: 600px;
+    height: 160px;
+    padding-top: 60px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+}
+.feature_title {
+    color: #000;
+    font-family: Helvetica Neue;
+    font-size: 32px;
+    line-height: 100%;
+    font-weight: 700;
+    letter-spacing: -0.3px;
+}
+
+.feature_text {
+    color: #000;
+    font-family: Helvetica Neue;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 150%;
+}
+
+.img_card {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    top: 0;
+    margin-right: 130px;
+}
+.what_you_need {
+    width: 500px;
+    height: 400px;
 }
