--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -128,6 +128,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="section_feature">
+            <div class="img_card">
+                <img src="/img/img-what-you-need.png" alt="what you need" class="what_you_need">
+            </div>
+            <div class="feature_title_text">
+                <h1 class="feature_title">What you need, when you need it</h1>
+
+                <p class="feature_text">Spend less time shuffling tabs with a comprehensive message archive and
+                    all your work tools at your fingertips.</p>
+            </div>
+        </section>
     </div>
 
 </body>
